--- a/code/LLM_SQL/LLM-sql.ipynb
+++ b/code/LLM_SQL/LLM-sql.ipynb
@@ -47,7 +47,7 @@
     "# 千问\n",
     "# os.environ['DASHSCOPE_API_KEY'] = 'sk-cxxxxxx'\n",
     "# \n",
-    "# llm = Tongyi(model_name=\"qwen-max\")"
+    "# llm = Tongyi(model_name=\"qwen1.5-72b\")"
    ],
    "metadata": {
     "collapsed": false,
